--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./assets/css/main.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
-    <section class="main">
+    <section class="pages-1">
       <div class="blue">
         <h1>GET PAGE DONE</h1>
         <h4>It take efforts</h4>
@@ -22,5 +24,152 @@
         <button>DOWNLOAD THIS THEME NOW!</button>
       </div>
     </section>
+   <section class="pages-2">
+    <div class="text">
+      <div class="our">
+        <h1>OUR SERVICES :</h1>
+      </div>
+
+    <div class="container">
+    <div class="row">
+      <div class="col-xl-6 col-md-12 col-12">
+        <h1>Lorem ipsum dolor sit amet</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+           Curabitur nec nisl odio. Mauris vehicula at nunc id posuere. 
+           Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+           Curabitur nec nisl odio.Mauris vehicula at nunc id posuere.</p>
+      </div>
+      <div class="col-xl-6 col-md-12 col-12">
+        <h1>Lorem ipsum dolor sit amet</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+           Curabitur nec nisl odio. Mauris vehicula at nunc id posuere. 
+           Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+           Curabitur nec nisl odio.Mauris vehicula at nunc id posuere.</p>
+      </div>
+    </div>
+    </div>
+    </div>
+    <div class="card-1">
+     <div class="col-xl-4 col-md-12 col-12">
+     <div class="box">
+      <i class="fa-solid fa-desktop fa-shake" style="color: #ffffff;"></i>
+      <h1>Sure Quique Menu</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+        Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+     </div>
+     </div>
+     <div class="col-xl-4 col-md-12 col-12">
+      <div class="box">
+       <i class="fa-solid fa-desktop fa-shake" style="color: #ffffff;"></i>
+       <h1>Sure Quique Menu</h1>
+       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.</p>
+       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </div>
+      </div>
+      <div class="col-xl-4 col-md-12 col-12">
+        <div class="box">
+         <i class="fa-solid fa-desktop fa-shake" style="color: #ffffff;"></i>
+         <h1>Sure Quique Menu</h1>
+         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+           Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.</p>
+         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        </div>
+    </div>
+    <div class="text-down">
+      <h1>Lorem ipsum dolor sit amet</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+        Curabitur nec nisl odio. Mauris vehicula at nunc id posuere. 
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+        Curabitur nec nisl odio. Mauris vehicula at nunc id posuere. 
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+        Curabitur nec nisl odio. Mauris vehicula at nunc id posuere. 
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+        Curabitur nec nisl odio. Mauris vehicula at nunc id posuere. 
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+        Curabitur nec nisl odio. Mauris vehicula at nunc id posuere. 
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+        Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.</p>
+    </div>
+   </section>
+   <section class="pages-3">
+    <div class="line-panel">
+     <div class="container">
+      <div class="row">
+        <div class="street-about">
+          <div class="col-xl-8">
+            <h1>Featured In Wall Street</h1>
+            <p>and many other magzines..</p>
+          </div>
+          <div class="col-xl-4">
+            <h1>300+</h1>
+            <p>Reports</p>
+          </div>
+        </div>
+      </div>
+     </div>
+    </div>
+   </section>
+    <section class="pages-4">
+      <div class="text-plan">
+        <div class="our-plan">
+          <h1>OUR PLANS :</h1>
+        </div>
+  
+      <div class="container">
+      <div class="row">
+        <div class="col-xl-6 col-md-12 col-12">
+          <h1> Lorem ipsum dolor sit amet</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+             Curabitur nec nisl odio. Mauris vehicula at nunc id posuere. 
+             Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+             Curabitur nec nisl odio.Mauris vehicula at nunc id posuere.</p>
+        </div>
+        <div class="col-xl-6 col-md-12 col-12">
+          <h1>Lorem ipsum dolor sit amet</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+             Curabitur nec nisl odio. Mauris vehicula at nunc id posuere. 
+             Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+             Curabitur nec nisl odio.Mauris vehicula at nunc id posuere.</p>
+        </div>
+        <div class="card-2">
+          <div class="col-xl-4 col-md-12 col-12">
+          <div class="boxdown">
+           <div class="head">Basic Plan</div>
+           <p>12 Accounts</p>
+           <p>52 Emails</p>
+           <p>50 GB Space</p>
+           <p>Free Support</p>
+           <div class="price"><p>$99 only</p></div>
+           <button class="read">read more</button>
+          </div>
+          </div>
+          <div class="col-xl-4 col-md-12 col-12">
+            <div class="boxdown">
+             <div class="head">Basic Plan</div>
+             <p>12 Accounts</p>
+             <p>52 Emails</p>
+             <p>50 GB Space</p>
+             <p>Free Support</p>
+             <div class="price"><p>$99 only</p></div>
+             <button class="read">read more</button>
+            </div>
+            </div>
+            <div class="col-xl-4 col-md-12 col-12">
+              <div class="boxdown">
+               <div class="head">Basic Plan</div>
+               <p>12 Accounts</p>
+               <p>52 Emails</p>
+               <p>50 GB Space</p>
+               <p>Free Support</p>
+               <div class="price"><p>$99 only</p></div>
+               <button class="read">read more</button>
+              </div>
+              </div>
+         </div>
+    </section>
+ 
   </body>
 </html>
