--- a/index.html
+++ b/index.html
@@ -16,6 +16,47 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
+    <section class="navi">
+      <header>
+        <div class="navi bg-black">
+          <div class="container">
+            <div class="row">
+              <nav class="navbar navbar-expand-lg navbar-light bg-black">
+                <a class="navbar-brand" href="#">Navbar</a>
+                <button
+                  class="navbar-toggler bg-light"
+                  type="button"
+                  data-toggle="collapse"
+                  data-target="#navbarSupportedContent"
+                  aria-controls="navbarSupportedContent"
+                  aria-expanded="false"
+                  aria-label="Toggle navigation"
+                >
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end " id="navbarSupportedContent">
+                  <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Service</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Pricing</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Contact</a>
+                    </li>
+                  </ul>
+                </div>
+              </nav>
+            </div>
+          </div>
+        </div>
+      </header>
+    </section>
+    
     <section class="pages-1">
       <div class="blue">
         <h1>GET PAGE DONE</h1>
@@ -49,35 +90,40 @@
     </div>
     </div>
     </div>
-    <div class="card-1">
-     <div class="col-xl-4 col-md-12 col-12">
-     <div class="box">
-      <i class="fa-solid fa-desktop fa-shake" style="color: #ffffff;"></i>
-      <h1>Sure Quique Menu</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-        Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-     </div>
-     </div>
-     <div class="col-xl-4 col-md-12 col-12">
-      <div class="box">
-       <i class="fa-solid fa-desktop fa-shake" style="color: #ffffff;"></i>
-       <h1>Sure Quique Menu</h1>
-       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.</p>
-       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    <div class="container">
+      <div class="row">
+        <div class="card-1">
+          <div class="col-xl-4 col-md-12 col-12">
+          <div class="box">
+           <i class="fa-solid fa-desktop fa-shake" style="color: #ffffff;"></i>
+           <h1>Sure Quique Menu</h1>
+           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+             Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.</p>
+           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
+          </div>
+          <div class="col-xl-4 col-md-12 col-12">
+           <div class="box">
+            <i class="fa-solid fa-desktop fa-shake" style="color: #ffffff;"></i>
+            <h1>Sure Quique Menu</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+              Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+           </div>
+           </div>
+           <div class="col-xl-4 col-md-12 col-12">
+             <div class="box">
+              <i class="fa-solid fa-desktop fa-shake" style="color: #ffffff;"></i>
+              <h1>Sure Quique Menu</h1>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+             </div>
+             </div>
+         </div>
       </div>
-      </div>
-      <div class="col-xl-4 col-md-12 col-12">
-        <div class="box">
-         <i class="fa-solid fa-desktop fa-shake" style="color: #ffffff;"></i>
-         <h1>Sure Quique Menu</h1>
-         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-           Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.</p>
-         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-        </div>
     </div>
+    
     <div class="text-down">
       <h1>Lorem ipsum dolor sit amet</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
@@ -170,6 +216,8 @@
               </div>
          </div>
     </section>
- 
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </body>
 </html>
